# iirspy

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  mkdocs.yml  old_README.md  pyproject.toml
.github/workflows/: main.yml
docs/: index.md  modules.md
iirspy/: __init__.py  iirs.py  iirs_wavelengths.txt  utils.py
iirspy/data/: ch2_iirs_solar_flux.txt  iirs_bad_bands.csv  spectral_polish_verma2022.csv
iirspy/data/iir/: bundle_iir.xml  readme.txt
iirspy/data/iir/calibration/: ch2_iirs_cal_e1g2_lut_coeff.csv  ch2_iirs_cal_e1g2_lut_coeff.xml  ch2_iirs_cal_e1g2_saturations_radiance.xml  ch2_iirs_cal_e2g2_lut_coeff.csv  ch2_iirs_cal_e2g2_lut_coeff.xml  ch2_iirs_cal_e2g2_saturations_radiance.xml  ch2_iirs_cal_e3g2_lut_coeff.csv  ch2_iirs_cal_e3g2_lut_coeff.xml  ch2_iirs_cal_e3g2_saturations_radiance.csv  ch2_iirs_cal_e3g2_saturations_radiance.xml  ch2_iirs_cal_e4g2_lut_coeff.csv  ch2_iirs_cal_e4g2_lut_coeff.xml  ch2_iirs_cal_e4g2_saturations_radiance.csv  ch2_iirs_cal_e4g2_saturations_radiance.xml  collection_calibration_inventory.csv  collection_calibration_inventory.xml
iirspy/data/iir/document/: ch2_iirs_pds_dp_archive_sis.xml  collection_document_inventory.csv  collection_document_inventory.xml
iirspy/data/iir/miscellaneous/: ch2_iirs_band_validity_list.xls  ch2_iirs_band_validity_list_readme.txt  ch2_iirs_solar_flux_readme.txt  collection_miscellaneous_inventory.csv  collection_miscellaneous_inventory.xml  readme.txt
iirspy/data/spectra/: 62231_avg_scaled_std_text.txt  bmr1ls101.tab  bmr1ls101.xml  readme.md
tests/: test_foo.py  test_iirs.py  test_utils.py
